# watchcrab

./: Cargo.toml  watchcrab.toml
examples/: watchcrab.toml
examples/systemd/: watchcrab.service
feeder/: Cargo.toml
feeder/src/: main.rs
src/: main.rs
