[package]
name = "feeder"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
tokio = { version = "1.37.0", features = ["macros", "time"] }
toml = "0.8.12"
